--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     // Google Play 서비스 종속 항목 추가
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    // TextInputLayout을 위하여 design 라이브러리 추가
+    implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
