--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ apply plugin: 'com.google.gms.google-services'
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.2.0')
 
+    // MQTT Setup
+    //implementation 'com.rabbitmq:amqp-client:5.9.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -55,6 +58,9 @@ dependencies {
     // TextInputLayout을 위하여 design 라이브러리 추가
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation files('libs\\amqp-client-5.13.0.jar')
+    implementation files('libs\\slf4j-api-1.7.21.jar')
+    implementation files('libs\\slf4j-simple-1.7.22.jar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
