--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,11 @@ dependencies {
     // MQTT Setup
     //implementation 'com.rabbitmq:amqp-client:5.9.0'
 
+    //eventbus를 사용하기 위해 추가
+    //implementation 'org.greenrobot:eventbus:3.0.0'
+
+    implementation("androidx.viewpager2:viewpager2:1.0.0")
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -51,6 +56,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
     // Firebase Authentication SDK 추가
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     // Google Play 서비스 종속 항목 추가
