--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
 
     implementation("androidx.viewpager2:viewpager2:1.0.0")
 
+    // ToggleButton Library
+    implementation 'nl.bryanderidder:themed-toggle-button-group:1.3.4'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
