--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,14 +40,10 @@ apply plugin: 'com.google.gms.google-services'
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.2.0')
 
-    // MQTT Setup
-    //implementation 'com.rabbitmq:amqp-client:5.9.0'
-
-    //eventbus를 사용하기 위해 추가
-    //implementation 'org.greenrobot:eventbus:3.0.0'
+    // Cloud Firestore Android 라이브러리의 종속 항목을 선언함.
+    implementation 'com.google.firebase:firebase-firestore-ktx'
 
     implementation("androidx.viewpager2:viewpager2:1.0.0")
-
     // ToggleButton Library
     implementation 'nl.bryanderidder:themed-toggle-button-group:1.3.4'
 
