--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ apply plugin: 'com.google.gms.google-services'
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.2.0')
 
+    implementation "com.google.android.material:material:1.3.0-alpha01"
+
     // Cloud Firestore Android 라이브러리의 종속 항목을 선언함.
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
@@ -60,8 +62,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     // Google Play 서비스 종속 항목 추가
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
-    // TextInputLayout을 위하여 design 라이브러리 추가
-    implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation files('libs\\amqp-client-5.13.0.jar')
     implementation files('libs\\slf4j-api-1.7.21.jar')
